Add POST /files and modify Accounts
